force-app/main/default/objects/Apttus_Config2__ConfigLineItemCustomFields__c/Apttus_Config2__ConfigLineItemCustomFields__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds the list of field API names from the line item object used in pricing callbacks</description>
    <label>Config LineItem Custom Fields</label>
</CustomObject>