force-app/main/default/objects/Apttus_Config2__ConfigLineItemCustomFields__c/fields/Apttus_Config2__CustomFieldNames4__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomFieldNames4__c</fullName>
    <description>Enter the list of field API names from the line item object used in pricing callbacks. Each field may be separated by a comma or a new line.</description>
    <inlineHelpText>Enter the list of field API names from the line item object used in pricing callbacks. Each field may be separated by a comma or a new line.</inlineHelpText>
    <label>Custom Field Names 4</label>
    <type>TextArea</type>
</CustomField>