force-app/main/default/objects/Apttus_Config2__ConfigLineItemCustomFields__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__CustomFieldNames__c</columns>
    <columns>Apttus_Config2__CustomFieldNames2__c</columns>
    <columns>Apttus_Config2__CustomFieldNames3__c</columns>
    <columns>Apttus_Config2__CustomFieldNames4__c</columns>
    <columns>Apttus_Config2__CustomFieldNames5__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>